[gd_scene load_steps=12 format=3 uid="uid://g2uvb42yujb7"]

[ext_resource type="Script" path="res://Scripts/tutorial_interface.gd" id="1_r8lbw"]
[ext_resource type="Texture2D" uid="uid://ljfbgt8eblb8" path="res://Sprites/spacebar.png" id="2_1o0vv"]
[ext_resource type="Texture2D" uid="uid://cfdhu1kl0ljlb" path="res://Sprites/wasd.png" id="3_mqgj2"]
[ext_resource type="Texture2D" uid="uid://013jhqtjf3ia" path="res://Sprites/shift.png" id="4_dmjhm"]
[ext_resource type="Texture2D" uid="uid://16ibpi8kc131" path="res://Sprites/mouseandlclick.jpg" id="5_ri0ki"]
[ext_resource type="Texture2D" uid="uid://1xjlpsnbhg3r" path="res://Sprites/wasdinstr.png" id="5_sjfdg"]
[ext_resource type="Texture2D" uid="uid://d2rwwlpuk1lvr" path="res://Sprites/spaceinstr.png" id="6_xtehp"]
[ext_resource type="Texture2D" uid="uid://6xd3ruoiw3mu" path="res://Sprites/mouseInstr.png" id="8_rc1xp"]
[ext_resource type="Texture2D" uid="uid://b2pkkt7va07u6" path="res://Sprites/shiftinstr.png" id="8_y1rc8"]
[ext_resource type="Texture2D" uid="uid://ksa7v75iiffd" path="res://Sprites/t.png" id="10_k0o48"]
[ext_resource type="Texture2D" uid="uid://crsabfxgi2b5h" path="res://Sprites/Tisntr.png" id="11_8414l"]

[node name="TutorialInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8lbw")

[node name="KeyboardButtons" type="Node2D" parent="."]
scale = Vector2(0.2, 0.2)

[node name="MovementInfo" type="TextureRect" parent="KeyboardButtons"]
texture_filter = 1
offset_left = 695.0
offset_top = 555.0
offset_right = 3935.0
offset_bottom = 3670.0
texture = ExtResource("3_mqgj2")

[node name="Spacebar" type="Sprite2D" parent="KeyboardButtons"]
texture_filter = 1
position = Vector2(2905, 2785)
scale = Vector2(28.275, 28.45)
texture = ExtResource("2_1o0vv")

[node name="Shiftinstr" type="Sprite2D" parent="KeyboardButtons"]
texture_filter = 1
position = Vector2(1030, 1640)
scale = Vector2(5, 5)
texture = ExtResource("8_y1rc8")

[node name="Shift" type="Sprite2D" parent="KeyboardButtons"]
texture_filter = 1
position = Vector2(965, 2220)
scale = Vector2(25.55, 22.85)
texture = ExtResource("4_dmjhm")

[node name="Spaceinstr" type="Sprite2D" parent="KeyboardButtons"]
texture_filter = 1
position = Vector2(3570, 2205)
scale = Vector2(5.26666, 5.2)
texture = ExtResource("6_xtehp")

[node name="Wasdinstr" type="Sprite2D" parent="KeyboardButtons"]
texture_filter = 1
position = Vector2(2465, 1037.5)
scale = Vector2(5.75, 6.45)
texture = ExtResource("5_sjfdg")

[node name="MouseAndCrosshair" type="Node2D" parent="."]
visible = false

[node name="MouseInstr" type="Sprite2D" parent="MouseAndCrosshair"]
position = Vector2(759, 290)
texture = ExtResource("8_rc1xp")

[node name="Sprite2D" type="Sprite2D" parent="MouseAndCrosshair"]
position = Vector2(1007, 354)
scale = Vector2(0.265797, 0.255025)
texture = ExtResource("5_ri0ki")

[node name="WeaponInstr" type="Node2D" parent="."]

[node name="T" type="Sprite2D" parent="WeaponInstr"]
texture_filter = 1
position = Vector2(635, 277)
scale = Vector2(2, 2.037)
texture = ExtResource("10_k0o48")

[node name="Tisntr" type="Sprite2D" parent="WeaponInstr"]
texture_filter = 1
position = Vector2(792, 259)
texture = ExtResource("11_8414l")
